Replace Xxx.of(...) calls with their Collections counterparts
Map.of() -> Collections.emptyMap()
List.of(x) -> Collections.singletonList(x)
List.of(...) -> Arrays.asList(...)